# lumen/app/Models/AdCampaignMerchant.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class AdCampaignMerchant extends Model 
+{   
+    /**
+     * The attributes that are autoincremental
+     *
+     * @var array
+     */
+    protected $guarded = null;
+    
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = [
+        'ad_campaign_id', 'merchant_id'
+    ];
+
+    /**
+     * The attributes excluded from the model's JSON form.
+     *
+     * @var array
+     */
+    protected $hidden = [
+    ];
+}
