# lumen/routes/api.php
@@ -45,7 +45,16 @@ $router->post('/adcampaigns/{name}/{cash_back_rate}/{date_from}/{date_to}', ['us
 ### READ
 $router->get('/adcampaigns[/{name}/{page_number}]', ['uses' => 'AdcampaignsController@getAdcampaigns']);
 $router->get('/adcampaigns/{name}', ['uses' => 'AdcampaignsController@getAdcampaigns']);
+$router->get('/adcampaigns/{adcampaign_id}/merchants[/{page_number}]', ['uses' => 'AdcampaignsController@getAdcampaignMerchants']);
 ### UPDATE
 $router->patch('/adcampaigns/{id}/{new_name}/{new_cash_back_rate}/{new_date_from}/{new_date_to}', ['uses' => 'AdcampaignsController@update']);
 ### DELETE
 $router->delete('/adcampaigns/{id}', ['uses' => 'AdcampaignsController@delete']);
+
+# Ad Campaigns Merchants CREATE . READ . DELETE
+# READ
+$router->get('/adcampaigns/{adcampaign_id}/merchants[/{page_number}]', ['uses' => 'AdcampaignsController@getAdcampaignMerchants']);
+# CREATE
+$router->post('/adcampaigns/{adcampaign_id}/merchants/{merchant_id}', ['uses' => 'AdcampaignsController@createAdcampaignMerchants']);
+### DELETE
+$router->delete('/adcampaigns/{adcampaign_id}/merchants/{merchant_id}', ['uses' => 'AdcampaignsController@deleteAdcampaignMerchants']);
